k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
        - name: hivebox
          image: YOUR_DOCKER_USERNAME/hivebox:v1
          ports:
            - containerPort: 5000
