k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hivebox
spec:
  selector:
    app: hivebox
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
